// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter utils getRangeExtraFormData getRangeExtraFormData - col: "testCol", lower: 0, upper: 0 1`] = `
Object {
  "append_form_data": Object {
    "filters": Array [
      Object {
        "col": "testCol",
        "op": ">=",
        "val": 0,
      },
      Object {
        "col": "testCol",
        "op": ">=",
        "val": 0,
      },
    ],
  },
}
`;

exports[`Filter utils getRangeExtraFormData getRangeExtraFormData - col: "testCol", lower: 1, upper: 2 1`] = `
Object {
  "append_form_data": Object {
    "filters": Array [
      Object {
        "col": "testCol",
        "op": ">=",
        "val": 1,
      },
      Object {
        "col": "testCol",
        "op": ">=",
        "val": 2,
      },
    ],
  },
}
`;

exports[`Filter utils getRangeExtraFormData getRangeExtraFormData - col: "testCol", lower: 1, upper: undefined 1`] = `
Object {
  "append_form_data": Object {
    "filters": Array [
      Object {
        "col": "testCol",
        "op": ">=",
        "val": 1,
      },
    ],
  },
}
`;

exports[`Filter utils getRangeExtraFormData getRangeExtraFormData - col: "testCol", lower: null, upper: 2 1`] = `
Object {
  "append_form_data": Object {
    "filters": Array [
      Object {
        "col": "testCol",
        "op": ">=",
        "val": 2,
      },
    ],
  },
}
`;

exports[`Filter utils getSelectExtraFormData getSelectExtraFormData - col: "testCol", value: ["value"], emptyFilter: false, inverseSelection: false 1`] = `
Object {
  "append_form_data": Object {
    "filters": Array [
      Object {
        "col": "testCol",
        "op": "IN",
        "val": Array [
          "value",
        ],
      },
    ],
  },
}
`;

exports[`Filter utils getSelectExtraFormData getSelectExtraFormData - col: "testCol", value: ["value"], emptyFilter: false, inverseSelection: true 1`] = `
Object {
  "append_form_data": Object {
    "filters": Array [
      Object {
        "col": "testCol",
        "op": "NOT IN",
        "val": Array [
          "value",
        ],
      },
    ],
  },
}
`;

exports[`Filter utils getSelectExtraFormData getSelectExtraFormData - col: "testCol", value: ["value"], emptyFilter: true, inverseSelection: false 1`] = `
Object {
  "append_form_data": Object {
    "extras": Object {
      "where": "1 = 0",
    },
  },
}
`;

exports[`Filter utils getSelectExtraFormData getSelectExtraFormData - col: "testCol", value: [], emptyFilter: false, inverseSelection: false 1`] = `
Object {
  "append_form_data": Object {
    "filters": Array [],
  },
}
`;

exports[`Filter utils getSelectExtraFormData getSelectExtraFormData - col: "testCol", value: null, emptyFilter: false, inverseSelection: false 1`] = `
Object {
  "append_form_data": Object {
    "filters": Array [],
  },
}
`;

exports[`Filter utils getSelectExtraFormData getSelectExtraFormData - col: "testCol", value: undefined, emptyFilter: false, inverseSelection: false 1`] = `
Object {
  "append_form_data": Object {
    "filters": Array [],
  },
}
`;
